// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slide toggle: should render a checked state 1`] = `
<label
  className="root"
  htmlFor="testToggle"
>
  <div
    className="switch"
  >
    <input
      aria-checked={true}
      aria-label="Test toggle"
      checked={true}
      className="input"
      id="testToggle"
      tabIndex="0"
      type="checkbox"
    />
    <div
      className="slider"
    />
    <Text
      baseline={false}
      className="label"
    >
       
      Test toggle
       
    </Text>
  </div>
</label>
`;

exports[`Slide toggle: should render with default props 1`] = `
<label
  className="root"
  htmlFor="testToggle"
>
  <div
    className="switch"
  >
    <input
      aria-label="Test toggle"
      className="input"
      id="testToggle"
      tabIndex="0"
      type="checkbox"
    />
    <div
      className="slider"
    />
    <Text
      baseline={false}
      className="label"
    >
       
      Test toggle
       
    </Text>
  </div>
</label>
`;

exports[`Slide toggle: should render with the label hidden 1`] = `
<label
  className="root"
  htmlFor="testToggle"
>
  <div
    className="switch"
  >
    <input
      aria-label="Test toggle"
      className="input"
      id="testToggle"
      tabIndex="0"
      type="checkbox"
    />
    <div
      className="slider"
    />
  </div>
</label>
`;

exports[`Slide toggle: should render with the label on the left 1`] = `
<label
  className="root"
  htmlFor="testToggle"
>
  <div
    className="switch toggleAfterLabel"
  >
    <input
      aria-label="Test toggle"
      className="input"
      id="testToggle"
      tabIndex="0"
      type="checkbox"
    />
    <div
      className="slider"
    />
    <Text
      baseline={false}
      className="label"
    >
       
      Test toggle
       
    </Text>
  </div>
</label>
`;
